--- a/kadry/src/main/webapp/umowa/sub/dane_zmiennapotracenie.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_zmiennapotracenie.xhtml
@@ -66,13 +66,13 @@
                             </p:column>
                             <p:column>
                                 <f:facet name="header">
-                                    <h:outputText value="kwota"/>
+                                    <h:outputText value="kwota stała"/>
                                 </f:facet>
                                 <bcf:outputpl value="#{itemzmiennapotr.kwotastala}"/>
                             </p:column>
                             <p:column>
                                 <f:facet name="header">
-                                    <h:outputText value="komornik"/>
+                                    <h:outputText value="suma zajęcia"/>
                                 </f:facet>
                                 <bcf:outputpl value="#{itemzmiennapotr.kwotakomornicza}"/>
                             </p:column>
@@ -87,6 +87,9 @@
                                     <h:outputText value="max ust."/>
                                 </f:facet>
                                 <p:selectBooleanCheckbox value="#{itemzmiennapotr.maxustawowy}"/>
+                            </p:column>
+                            <p:column width="30" style="text-align: center;">
+                                <p:commandButton icon="pi pi-pencil" actionListener="#{zmiennaPotraceniaView.wybierzdoedycji(itemzmiennapotr)}" update="north @(form)"/>
                             </p:column>
                             <p:column style="text-align: center;">
                                 <p:commandButton icon="pi pi-trash" actionListener="#{zmiennaPotraceniaView.usunZmiennaPotr(itemzmiennapotr)}" update="north @(form)"/>
