--- a/kadry/src/main/webapp/umowa/sub/edycjadanych_umowa.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/edycjadanych_umowa.xhtml
@@ -23,8 +23,8 @@
                         <p:separator/>
                         <p:separator/>
                         <p:outputLabel value="data zawarcia" for="datazawarcia1" />
-                        <p:inputText id="datazawarcia1" value="#{umowaView.selected.datazawarcia}" title="data zawarcia"  placeholder="____-__-__"  required="true" styleClass="dataUmowy" maxlength="10">
-                            <p:ajax event="change" listener="#{umowaView.naniesdatynaumowe}" partialSubmit="true" global="false" update="@(.dataUmowy) @this"/>
+                        <p:inputText id="datazawarcia1" value="#{umowaView.selected.datazawarcia}" title="data zawarcia"  placeholder="____-__-__"  required="true" styleClass="dataUmowy dataklasa" maxlength="10">
+                            <p:ajax event="change" onstart="ustawDateSprzedazy(#{wpisView.rokWpisu},#{wpisView.miesiacWpisu});"  listener="#{umowaView.naniesdatynaumowe}" partialSubmit="true" global="false" update="@(.dataUmowy) @this"/>
                         </p:inputText>
                         <p:outputLabel value="rodzaj umowy" for="rodzajumowy1" />
                         <p:selectOneMenu id="rodzajumowy1" value="#{umowaView.selected.umowakodzus}" converter="#{umowakodzusConverter}" autoWidth="false" style="width: 300px;" filter="true" filterMatchMode="contains" required="true">
@@ -52,10 +52,12 @@
                     </p:panelGrid>
                     <p:panelGrid columns="2">
                         <p:outputLabel value="data od" for="dataod1" />
-                        <p:inputText id="dataod1" value="#{umowaView.selected.dataod}" title="data od"  placeholder="____-__-__"  required="true" styleClass="dataUmowy" maxlength="10"/>
+                        <p:inputText id="dataod1" value="#{umowaView.selected.dataod}" title="data od"  placeholder="____-__-__"  required="true" styleClass="dataUmowy dataklasa" maxlength="10">
+                            <p:ajax event="change" onstart="ustawDateSprzedazy(#{wpisView.rokWpisu},#{wpisView.miesiacWpisu});" partialSubmit="true" global="false"  update="@(.dataklasa)"/>
+                        </p:inputText>
                         <p:outputLabel value="data do" for="datado1" />
-                        <p:inputText id="datado1" value="#{umowaView.selected.datado}" title="data do"  placeholder="____-__-__"  maxlength="10">
-                            <p:ajax event="change" listener="#{umowaView.sprawdzczyumowajestnaczas}" partialSubmit="true" global="false" />
+                        <p:inputText id="datado1" value="#{umowaView.selected.datado}" title="data do"  placeholder="____-__-__"  maxlength="10" styleClass="dataklasa">
+                            <p:ajax event="change" listener="#{umowaView.sprawdzczyumowajestnaczas}"  onstart="ustawDateSprzedazy(#{wpisView.rokWpisu},#{wpisView.miesiacWpisu});" partialSubmit="true" global="false"  update="@(.dataklasa)"/>
                         </p:inputText>
                         <p:outputLabel value="termin rozpoczecia pracy" for="datarozp1" />
                         <p:inputText id="datarozp1" value="#{umowaView.selected.terminrozpoczeciapracy}" title="termin rozpoczecia pracy" styleClass="dataUmowy"  placeholder="____-__-__"  maxlength="10"/>
@@ -137,15 +139,17 @@
                         <p:inputText id="stanowisko" value="#{umowaView.selected.stanowisko}" title="stanowisko" style="width: 200px;"/>
                     </p:panelGrid>
                     <p:panelGrid columns="2">
-                        <p:outputLabel value="data zawarcia" for="datazawarcia" />
+                        <p:outputLabel value="data zawarcia"    for="datazawarcia" />
                         <p:inputText id="datazawarcia" value="#{umowaView.selected.datazawarcia}" title="data zawarcia"  placeholder="____-__-__"  required="true" styleClass="dataUmowy" maxlength="10">
-                            <p:ajax event="change" listener="#{umowaView.naniesdatynaumowe}" partialSubmit="true" global="false" update="@(.dataUmowy)"/>
+                            <p:ajax event="change"  onstart="ustawDateSprzedazy(#{wpisView.rokWpisu},#{wpisView.miesiacWpisu});" listener="#{umowaView.naniesdatynaumowe}" partialSubmit="true" global="false" update="@(.dataUmowy)"/>
                         </p:inputText>
                         <p:outputLabel value="data od" for="dataod" />
-                        <p:inputText id="dataod" value="#{umowaView.selected.dataod}" title="data od"  placeholder="____-__-__"  required="true" styleClass="dataUmowy" maxlength="10"/>
+                        <p:inputText id="dataod" value="#{umowaView.selected.dataod}" title="data od"  placeholder="____-__-__"  required="true" styleClass="dataUmowy dataklasa" maxlength="10">
+                            <p:ajax event="change" onstart="ustawDateSprzedazy(#{wpisView.rokWpisu},#{wpisView.miesiacWpisu});" partialSubmit="true" global="false"  update="@(.dataklasa)"/>
+                        </p:inputText>
                         <p:outputLabel value="data do" for="datado" />
                         <p:inputText id="datado" value="#{umowaView.selected.datado}" title="data do"  placeholder="____-__-__"  maxlength="10">
-                            <p:ajax event="change" listener="#{umowaView.sprawdzczyumowajestnaczas}" partialSubmit="true" global="false" />
+                            <p:ajax event="change"  onstart="ustawDateSprzedazy(#{wpisView.rokWpisu},#{wpisView.miesiacWpisu});" listener="#{umowaView.sprawdzczyumowajestnaczas}" partialSubmit="true" global="false"  update="@(.dataklasa)"/>
                         </p:inputText>
                          <p:outputLabel value="wiek" for="wiek" />
                          <h:outputText id="wiek" value="#{umowaView.selected.wiekumowa}" styleClass="dataUmowy"/>
